add_subdirectory(common)

add_subdirectory(0001_two_sum)
add_subdirectory(0004_median_of_two_sorted_arrays)
add_subdirectory(0009_palindrome_number)
add_subdirectory(0135_candy)
add_subdirectory(0137_single_number_ii)
add_subdirectory(0138_copy_list_with_random_pointer)
add_subdirectory(0206_reverse_linked_list)
add_subdirectory(0287_find_the_duplicate_number)
add_subdirectory(0332_reconstruct_itinerary)
add_subdirectory(0392_is_subsequence)
add_subdirectory(0725_split_linked_list_in_parts)
add_subdirectory(0799_champagne_tower)
add_subdirectory(1048_longest_string_chain)
add_subdirectory(1282_group_the_people_given_the_group_size_they_belong_to)
add_subdirectory(1359_count_all_valid_pickup_and_delivery_options)
add_subdirectory(1584_min_cost_to_connect_all_points)
add_subdirectory(1631_path_with_minimum_effort)
add_subdirectory(1647_minimum_deletions_to_make_character_frequencies_unique)
add_subdirectory(1658_minimum_operations_to_reduce_x_to_zero)
